[package]
authors = ["eV <ev@7pr.xyz>"]
name = "challenge-bypass-ristretto"
version = "0.1.0"

[dependencies]
clear_on_drop = "0.2.3"
crypto-mac = "^0.6.0"
curve25519-dalek = { version = "0.21.0", default-features = false }
digest = "^0.7.0"
hmac = "^0.6.0"
rand = { version = "0.5.5", default-features = false }

[dependencies.base64]
optional = true
version = "0.9.3"

[dependencies.serde]
optional = true
version = "^1.0.0"
default-features = false

[dependencies.merlin]
optional = true
version = "0.4.0"

[features]
nightly = ["clear_on_drop/nightly", "curve25519-dalek/nightly"]
default = ["std", "u32_backend"]
std = ["alloc", "curve25519-dalek/std"]
alloc = ["curve25519-dalek/alloc"]
u32_backend = ["curve25519-dalek/u32_backend"]
u64_backend = ["curve25519-dalek/u64_backend"]
avx2_backend = ["curve25519-dalek/avx2_backend"]

[dev-dependencies]
sha2 = "^0.7"
[metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "./rustdoc-include-katex-header.html",
]
