[package]
authors = ["eV <ev@7pr.xyz>"]
name = "challenge-bypass-ristretto"
version = "0.1.0"

[dependencies]
clear_on_drop = "0.2.3"
crypto-mac = "^0.6.0"
digest = "^0.7.0"
failure = "0.1.3"
hmac = "^0.6.0"

[dependencies.base64]
optional = true
version = "0.9.3"

[dependencies.curve25519-dalek]
default-features = false
version = "0.21.0"

[dependencies.merlin]
optional = true
version = "0.4.0"

[dependencies.rand]
default-features = false
version = "0.5.5"

[dependencies.serde]
default-features = false
optional = true
version = "^1.0.0"

[dev-dependencies]
sha2 = "^0.7"

[features]
alloc = ["curve25519-dalek/alloc"]
avx2_backend = ["curve25519-dalek/avx2_backend"]
default = [
    "std",
    "u64_backend",
]
nightly = [
    "clear_on_drop/nightly",
    "curve25519-dalek/nightly",
]
std = [
    "alloc",
    "curve25519-dalek/std",
]
u32_backend = ["curve25519-dalek/u32_backend"]
u64_backend = ["curve25519-dalek/u64_backend"]
[metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "./rustdoc-include-katex-header.html",
]
