[package]
authors = ["eV <ev@7pr.xyz>"]
edition = "2018"
name = "challenge-bypass-ristretto"
version = "1.0.0-pre.0"
readme = "README.md"
license = "MPL-2.0"
repository = "https://github.com/brave-intl/challenge-bypass-ristretto"
documentation = "https://docs.rs/challenge-bypass-ristretto"
description = "A rust implemention of the privacy pass cryptographic protocol using the Ristretto group (WIP)"

exclude = [
    ".gitignore",
    ".travis.yml",
]

[dependencies]
clear_on_drop = "0.2.3"
crypto-mac = "0.7"
curve25519-dalek = { version = "2", default-features = false }
digest = "0.8"
hmac = "0.7"
rand = { version = "0.7.0", default-features = false }
rand_chacha = "0.2.2"

[dependencies.base64]
optional = true
version = "0.9.3"

[dependencies.serde]
optional = true
version = "^1.0.0"
default-features = false

[dependencies.merlin]
optional = true
version = "1"

[dev-dependencies]
sha2 = "0.8"
base64 = "0.9.3"
rand = { version = "0.7.0", default-features = true }

[features]
nightly = ["clear_on_drop/nightly", "curve25519-dalek/nightly"]
default = ["std", "u64_backend"]
std = ["alloc", "curve25519-dalek/std"]
alloc = ["curve25519-dalek/alloc"]
u32_backend = ["curve25519-dalek/u32_backend"]
u64_backend = ["curve25519-dalek/u64_backend"]
avx2_backend = ["curve25519-dalek/avx2_backend"]

[package.metadata.docs.rs]
features = ["nightly"]
rustdoc-args = [
    "--document-private-items",
    "--html-in-header",
    "./rustdoc-include-katex-header.html",
]
